deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-mysql
  labels:
    app: petclinic-mysql
    app.kubernetes.io/part-of: petclinic-daniel
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-mysql
  template:
    metadata:
      labels:
        app: petclinic-mysql
    spec:
      volumes:
        - name: petclinic-mysql-data
          persistentVolumeClaim:
            claimName: petclinic-mysql
      containers:
        - name: petclinic-mysql
          resources:
            limits:
              memory: 1Gi
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - MYSQL_PWD="$MYSQL_PASSWORD" mysqladmin -u $MYSQL_USER ping
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: petclinic-mysql-data
              mountPath: /var/lib/mysql/data
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:ac25ce04966621fb2ad47f99cbf6644f39822a1efcad8cbd0d49fb1222215f73
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app
  labels:
    app: petclinic-app
    app.kubernetes.io/part-of: petclinic-daniel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      containers:
        - name: petclinic-app
          image: ghcr.io/schwanenseee/petclinic-app:v1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: petclinic-phpmyadmin
  labels:
    app: petclinic-phpmyadmin
    app.kubernetes.io/part-of: petclinic-daniel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-phpmyadmin
  template:
    metadata:
      labels:
        app: petclinic-phpmyadmin
    spec:
      containers:
        - name: petclinic-phpmyadmin
          image: bitnami/phpmyadmin
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
