route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: petclinic-app
  labels:
    app: petclinic-app
    app.kubernetes.io/part-of: petclinic-daniel
spec:
  host: petclinic-app-zlic-dschmitz1.apps.exoscale-ch-gva-2-0.appuio.cloud
  to:
    kind: Service
    name: petclinic-app
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: petclinic-phpmyadmin
  labels:
    app: petclinic-phpmyadmin
    app.kubernetes.io/part-of: petclinic-daniel
spec:
  host: petclinic-phpmyadmin-zlic-dschmitz1.apps.exoscale-ch-gva-2-0.appuio.cloud
  to:
    kind: Service
    name: petclinic-phpmyadmin
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
